# spore-encode

./: Cargo.toml  README.md
src/: main.rs
