[package]
name = "spore-encode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.15", features = ["cargo"] }
spore-types = { path = "../cellular-contract/lib/types" }
spore-utils = { path = "../cellular-contract/lib/utils" }
molecule = "0.7.1"
hex = "0.4.3"
ckb-types = "0.108.0"
blake2b-rs = "0.2.0"